rarwes to rarwe

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "rarwes",
+  "name": "rarwe",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for rarwes goes here",
+  "description": "Small description for rarwe goes here",
   "repository": "",
   "license": "MIT",
   "author": "",
