--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
     "@ember/test-helpers": "^2.6.0",
+    "@fortawesome/ember-fontawesome": "^0.4.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
@@ -45,6 +48,7 @@
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
+    "ember-set-helper": "^2.0.1",
     "ember-source": "~4.0.1",
     "ember-template-lint": "^3.15.0",
     "ember-welcome-page": "^6.0.0",
